build: require Java 22